Crash while snaping to curve made from Susane #37550

Closed
opened 2013-11-20 13:55:05 +01:00 by Duarte Farrajota Ramos · 7 comments

System Information
Windows 7 64Bits

Blender Version
Broken: blender-2.69-067d52c-win64.zip from today's buildot 20 November 2013

Short description of error
Blender Crashes when trying to snap to vertices of a curve created from a Susane

Exact steps for others to reproduce the error

  • Shift+A > Add Mesh Susane
  • Tab into edit mode
  • X > Erase faces only
  • Tab out of edit mode
  • With Susane selected Alt+C > C Curve from mesh/text
  • Tab into edit mode again
  • Change snapping to vertex
  • Move a vertex with G
  • Press CTRL to snap to something
  • Immediate crash

PS: From the bottom of my heart many many many many thanks to Brecht for supporting curve snapping. Really, I have been missing this for ages!

**System Information** Windows 7 64Bits **Blender Version** Broken: blender-2.69-067d52c-win64.zip from today's buildot 20 November 2013 **Short description of error** Blender Crashes when trying to snap to vertices of a curve created from a Susane **Exact steps for others to reproduce the error** - Shift+A > Add Mesh Susane - Tab into edit mode - X > Erase faces only - Tab out of edit mode - With Susane selected Alt+C > C Curve from mesh/text - Tab into edit mode again - Change snapping to vertex - Move a vertex with G - Press CTRL to snap to something - Immediate crash PS: From the bottom of my heart many many many many thanks to Brecht for supporting curve snapping. Really, I have been missing this for ages!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos
Campbell Barton self-assigned this 2013-11-20 14:07:30 +01:00

This issue was referenced by blender/blender-addons-contrib@82238c3e36

This issue was referenced by blender/blender-addons-contrib@82238c3e3679d11e38f0e127698afc9dee8521b4

This issue was referenced by 82238c3e36

This issue was referenced by 82238c3e3679d11e38f0e127698afc9dee8521b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 82238c3e36.

Closed by commit 82238c3e36.

WOW, less then half an hour from bug report and already fixed??
Awesome, here, have a Brofist

WOW, less then half an hour from bug report and already fixed?? Awesome, here, have a [Brofist](http://files.myopera.com/JanetB/albums/5227102/Internet%20Bro%20Fist.jpg)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37550
No description provided.