Fix T37550: Crash while snaping to curve made from Susane (bug in recent addition)